# Linux_airobot

./: .gitignore  CMakeLists.txt  README.md  tree.md
app/: CMakeLists.txt  main.c
app/ui/: page_bt_audio.c  page_conf.h  page_main.c  page_sleep.c
app/ui/data/: device_data.c
app/ui/page_ai/: ipc_udp.c  ipc_udp.h  page_ai.c  page_ai.h  ui_system.c  ui_system.h
app_control_center/: CMakeLists.txt  cfg.h  control_center.cpp  http.cpp  http.h  ipc_udp.cpp  ipc_udp.h  uuid.cpp  uuid.h  websocket_client.cpp  websocket_client.h
app_sound/: CMakeLists.txt  Makefile  aplay.cpp  aplay.h  cfg.h  opus.cpp  opus.h  record.cpp  record.h  sound_app.cpp  说明.md
app_xiaozhi/: CMakeLists.txt  ipc_udp.c  lang_config.h  main.c  page_main.c  ui_system.c
app_xiaozhi/res/: res_conf.h
app_xiaozhi/res/font/: font_conf.h
app_xiaozhi/res/image/: image_conf.h
app_xiaozhi/res/music/: music_conf.h
component/bt_audio/: CMakeLists.txt  app_bt_audio.c  app_bt_audio.h
component/bt_audio/include/: bt_manager.h
component/bt_audio/lib/: libasound.so.2.0.0  libbluetooth.so.3  libdbus-1.so.3  libffi.so.7.1.0  libgio-2.0.so.0.6600.4  libglib-2.0.so.0.6600.4  libgmodule-2.0.so.0.6600.4  libgobject-2.0.so.0.6600.4  libjson-c.so.5.1.0  libncursesw.so.6.4  libreadline.so.8.1  libsbc.so.1.2.2  libz.so.1.2.11
